# aldrovandi-provenance

./: .gitignore  .releaserc  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  run-tests.yml
aldrovandi_provenance/: __init__.py  generate_provenance.py
data/: example.ttl  example_with_provenance.trig  example_with_provenance.ttl
tests/: __init__.py  test_provenance.py
